--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,15 @@
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
 
+
+    <dependencies>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.24</version>
+        <scope>provided</scope>
+    </dependency>
+    </dependencies>
+
+
 </project>
